--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                                 <h2 class="fs-4 fw-bold">Attendance Form</h2>
                                 <p class="mb-0">Mark your attendance for meetings and events by following the steps provided in our <strong>Attendance Guide</strong>.</p>
                                 
-                                <a class="btn btn-primary btn-lg mt-3" href="all-attendance.html" target="_blank">Attendance</a>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.gle/StgULTsytrcfZXBv6" target="_blank">Attendance</a>
                             </div>
                         </div>
                     </div>
