--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                                 <h2 class="fs-4 fw-bold">Feedback Form</h2>
                                 <p class="mb-0">We value your feedback! Share your thoughts on our events and suggest improvements.</p>
                                 
-                                <a class="btn btn-primary btn-lg mt-3" href="all-feedback.html" target="_blank">Give Feedback</a>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.gle/u8P1KMEXmjWTgzhd8" target="_blank">Give Feedback</a>
                             </div>
                         </div>
                     </div>
