updates eboard form

--- a/all-eboard.html
+++ b/all-eboard.html
@@ -347,35 +347,18 @@
             </div>
         </section>
 
-        <!-- E-Board Application Cards -->
-        <div class="row gx-lg-5">
-            <!-- FIU Students Application -->
-            <div class="col-lg-6 mb-5">
-                <div class="card bg-light border-0 h-100 shadow-sm">
-                    <div class="card-body text-center p-4 p-lg-5">
-                        <h2 class="fs-4 fw-bold">For FIU Students</h2>
-                        <p>Are you an FIU student? Apply now to make a difference on campus as a Code Crunch E-Board member.</p>
-                        <a 
-                            class="btn btn-primary btn-lg mt-3" 
-                            href="https://forms.office.com/r/EtnSSS6ESV" 
-                            target="_blank" 
-                            aria-label="E-Board Application for FIU Students">
-                            Apply Now
-                        </a>
-                    </div>
-                </div>
-            </div>
+
 
             <!-- Open to University Students and Industry Leaders -->
             <div class="col-lg-6 mb-5">
                 <div class="card bg-light border-0 h-100 shadow-sm">
                     <div class="card-body text-center p-4 p-lg-5">
                         <h2 class="fs-4 fw-bold">Join Our E-Board</h2>
-                        <p>Are you a non-FIU student or an industry leader passionate about technology and innovation? Join Code Crunch's E-Board to help foster the next generation of tech talent.</p>
+                        <p>Are you a FIU Student, non-FIU student or an industry leader passionate about technology and innovation? Join Code Crunch's E-Board to help foster the next generation of tech talent.</p>
                         <p>Whether you're a student from another university or a seasoned professional, we welcome you to bring your expertise and energy to our team!</p>
                         <a 
                             class="btn btn-primary btn-lg mt-3" 
-                            href="https://forms.office.com/r/UCEj8FhJKp" 
+                            href="https://forms.gle/skZUsCyPGPeUw7zRA" 
                             target="_blank" 
                             aria-label="E-Board Application for Students and Industry Leaders">
                             Apply Now
@@ -383,7 +366,11 @@
                     </div>
                 </div>
             </div>
+
+
         </div>
+
+
     </div>
 </section>
 
