--- a/all-eboard.html
+++ b/all-eboard.html
@@ -360,7 +360,7 @@
                             class="btn btn-primary btn-lg mt-3" 
                             href="https://forms.gle/skZUsCyPGPeUw7zRA" 
                             target="_blank" 
-                            aria-label="E-Board Application for Students and Industry Leaders">
+                            aria-label="E-Board Application for FIU Students, non-FIU Students and Industry Leaders">
                             Apply Now
                         </a>
                     </div>
