--- a/all-eboard.html
+++ b/all-eboard.html
@@ -264,7 +264,7 @@
             No experience? No problem! All students, regardless of major, and professionals eager to make an impact are encouraged to apply.
         </p>
 
-        <!-- E-Board Details Section -->
+                <!-- E-Board Details Section -->
         <section class="e-board-section py-5">
             <div class="container">
                 <h1 class="display-5 fw-bold text-center mb-5">Join Code Crunch as an E-Board Volunteer!</h1>
@@ -281,37 +281,46 @@
                             With the launch of Code Crunch Global in October 2024, students worldwide can now join virtually to improve their technical skills and prepare for interviews in a supportive, community-driven environment.
                         </p>
 
-                        <div class="container">
-                            <h3 class="fs-5 fw-bold mt-4 text-center">Who Can Apply?</h3>
-                            <ul class="text-start mx-auto" style="max-width: 600px;">
-                                <li>FIU students from all majors.</li>
-                                <li>Students from other universities worldwide.</li>
-                                <li>Industry professionals passionate about fostering innovation and supporting the next generation of tech talent.</li>
-                            </ul>
-                        </div>
-
+                        <h3 class="fs-5 fw-bold mt-4 text-center">Who Can Apply?</h3>
+                        <ul class="text-start mx-auto" style="max-width: 600px;">
+                            <li>FIU students from all majors.</li>
+                            <li>Students from other universities worldwide.</li>
+                            <li>Industry professionals passionate about fostering innovation and supporting the next generation of tech talent.</li>
+                        </ul>
                     </div>
-
-                    
 
                     <!-- Column 2: Key Responsibilities -->
                     <div class="col-lg-4 mb-4">
-                        <h2 class="fs-4 fw-bold">Key Responsibilities</h2>
+                        <h2 class="fs-4 fw-bold">Open Position: Logistics Chair</h2>
+                        <p><strong>Time Commitment:</strong> 4 to 5 hours per week (may vary).</p>
+
+                        <h3 class="fs-5 fw-bold mt-4">Key Responsibilities:</h3>
                         <p><strong>Industry Engagement:</strong></p>
                         <ul>
-                            <li>Build connections with industry professionals to recruit guest speakers, panelists, and mentors.</li>
-                            <li>Facilitate discussions and workshops on career preparation, industry trends, and technical innovation.</li>
+                            <li>Reach out to industry professionals to organize guest speaker sessions, workshops, or panels.</li>
+                            <li>Establish and maintain relationships with corporate sponsors or community partners.</li>
+                            <li>Represent the club at external events, such as hackathons, conferences, or networking mixers.</li>
                         </ul>
+
                         <p><strong>Event Coordination:</strong></p>
                         <ul>
-                            <li>Plan and execute events such as workshops, hackathons, and panel discussions.</li>
-                            <li>Manage event logistics, including scheduling, locations, materials, and virtual setups.</li>
+                            <li>Plan and execute club events, including workshops, general meetings, and social gatherings.</li>
+                            <li>Manage event logistics, such as booking venues, arranging equipment, and coordinating with vendors.</li>
+                            <li>Oversee event timelines and ensure all materials and resources are ready before each event.</li>
                         </ul>
+
                         <p><strong>Grant and Funding Support:</strong></p>
                         <ul>
-                            <li>Research and identify grant opportunities to support club initiatives.</li>
-                            <li>Assist in writing and submitting grant proposals.</li>
-                            <li>Collaborate on building partnerships with organizations for sponsorship and funding.</li>
+                            <li>Research potential grants and funding opportunities to support club initiatives.</li>
+                            <li>Write and submit grant proposals with detailed budgets and project descriptions.</li>
+                            <li>Collaborate with the Treasurer to track funds and ensure proper allocation for events and activities.</li>
+                        </ul>
+
+                        <p><strong>Tech Lead:</strong></p>
+                        <ul>
+                            <li>Assist in the technical setup of club activities, such as workshops or coding challenges.</li>
+                            <li>Manage technical tools and platforms, such as the club’s website, GitHub repositories, and event calendars.</li>
+                            <li>Provide technical support during events, ensuring smooth operations of presentations, live demos, or virtual tools.</li>
                         </ul>
                     </div>
 
@@ -334,13 +343,7 @@
                         <p>No prior experience is required; we welcome individuals eager to learn and make an impact.</p>
                         <h2 class="fs-4 fw-bold mt-4">How to Apply</h2>
                         <p>
-                            Interested in joining? Apply by filling out the application form below.
-                        </p>
-
-
-                        
-                        <p>
-                            We’re excited to have you help us create an inclusive and innovative tech community at FIU and beyond!
+                            Interested in joining? Apply by filling out the application form below. We’re excited to have you help us create an inclusive and innovative tech community at FIU and beyond!
                         </p>
                     </div>
                 </div>
@@ -349,23 +352,25 @@
 
 
 
-            <!-- Open to University Students and Industry Leaders -->
-            <div class="col-lg-6 mb-5">
-                <div class="card bg-light border-0 h-100 shadow-sm">
-                    <div class="card-body text-center p-4 p-lg-5">
-                        <h2 class="fs-4 fw-bold">Join Our E-Board</h2>
-                        <p>Are you a FIU Student, non-FIU student or an industry leader passionate about technology and innovation? Join Code Crunch's E-Board to help foster the next generation of tech talent.</p>
-                        <p>Whether you're a student from another university or a seasoned professional, we welcome you to bring your expertise and energy to our team!</p>
-                        <a 
-                            class="btn btn-primary btn-lg mt-3" 
-                            href="https://forms.gle/skZUsCyPGPeUw7zRA" 
-                            target="_blank" 
-                            aria-label="E-Board Application for FIU Students, non-FIU Students and Industry Leaders">
-                            Apply Now
-                        </a>
+
+                        <!-- Open to University Students and Industry Leaders -->
+                <div class="col-lg-6 mb-5 d-flex justify-content-center align-items-center">
+                    <div class="card bg-light border-0 h-100 shadow-sm text-center">
+                        <div class="card-body p-4 p-lg-5">
+                            <h2 class="fs-4 fw-bold">Join Our E-Board</h2>
+                            <p>Are you a FIU Student, non-FIU student, or an industry leader passionate about technology and innovation? Join Code Crunch's E-Board to help foster the next generation of tech talent.</p>
+                            <p>Whether you're a student from another university or a seasoned professional, we welcome you to bring your expertise and energy to our team!</p>
+                            <a 
+                                class="btn btn-primary btn-lg mt-3" 
+                                href="https://forms.gle/skZUsCyPGPeUw7zRA" 
+                                target="_blank" 
+                                aria-label="E-Board Application for FIU Students, non-FIU Students, and Industry Leaders">
+                                Apply Now
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
+
 
 
         </div>
