--- a/SCHDEULES.html
+++ b/SCHDEULES.html
@@ -309,7 +309,7 @@
             <a href="https://forms.gle/PPyyu8zyCNP1TT8S8" class="btn btn-success" aria-label="WhatsApp">
                 <i class="bi bi-whatsapp"></i> WhatsApp
             </a>
-            <a href="https://forms.office.com/r/JEbApqq0U9" class="btn btn-secondary" aria-label="Discord">
+            <a href="https://forms.gle/PPyyu8zyCNP1TT8S8" class="btn btn-secondary" aria-label="Discord">
                 <i class="bi bi-discord"></i> Discord
             </a>
             <a href="https://fiu.campuslabs.com/engage/organization/codecrunch" class="btn btn-warning" aria-label="Panther Connect">
