--- a/all-eboard.html
+++ b/all-eboard.html
@@ -235,7 +235,7 @@
             <a href="https://forms.gle/PPyyu8zyCNP1TT8S8" class="btn btn-success" aria-label="WhatsApp">
                 <i class="bi bi-whatsapp"></i> WhatsApp
             </a>
-            <a href="https://forms.office.com/r/JEbApqq0U9" class="btn btn-secondary" aria-label="Discord">
+            <a href="hhttps://forms.gle/PPyyu8zyCNP1TT8S8" class="btn btn-secondary" aria-label="Discord">
                 <i class="bi bi-discord"></i> Discord
             </a>
             <a href="https://fiu.campuslabs.com/engage/organization/codecrunch" class="btn btn-warning" aria-label="Panther Connect">
@@ -350,34 +350,36 @@
             </div>
         </section>
 
-
-
-
-                        <!-- Open to University Students and Industry Leaders -->
-                <div class="col-lg-6 mb-5 d-flex justify-content-center align-items-center">
-                    <div class="card bg-light border-0 h-100 shadow-sm text-center">
-                        <div class="card-body p-4 p-lg-5">
-                            <h2 class="fs-4 fw-bold">Join Our E-Board</h2>
-                            <p>Are you a FIU Student, non-FIU student, or an industry leader passionate about technology and innovation? Join Code Crunch's E-Board to help foster the next generation of tech talent.</p>
-                            <p>Whether you're a student from another university or a seasoned professional, we welcome you to bring your expertise and energy to our team!</p>
-                            <a 
-                                class="btn btn-primary btn-lg mt-3" 
-                                href="https://forms.gle/skZUsCyPGPeUw7zRA" 
-                                target="_blank" 
-                                aria-label="E-Board Application for FIU Students, non-FIU Students, and Industry Leaders">
-                                Apply Now
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-
-
-        </div>
-
-
     </div>
 </section>
+
+<section class="page-content-section py-5">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-6 mb-5 d-flex justify-content-center align-items-center">
+                <div class="card bg-light border-0 h-100 shadow-sm text-center">
+                    <div class="card-body p-4 p-lg-5">
+                        <h2 class="fs-4 fw-bold">Join Our E-Board</h2>
+                        <p>Are you a FIU Student, non-FIU student, or an industry leader passionate about technology and innovation? Join Code Crunch's E-Board to help foster the next generation of tech talent.</p>
+                        <p>Whether you're a student from another university or a seasoned professional, we welcome you to bring your expertise and energy to our team!</p>
+                        <a 
+                            class="btn btn-primary btn-lg mt-3" 
+                            href="https://forms.gle/skZUsCyPGPeUw7zRA" 
+                            target="_blank" 
+                            aria-label="E-Board Application for FIU Students, non-FIU Students, and Industry Leaders">
+                            Apply Now
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+        
+
+
+
 
 
 
