--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                                 <h2 class="fs-4 fw-bold">Join Our Discord & WhatsApp group</h2>
                                 <p class="mb-0">You must <strong>become a member</strong> to receive the invite link to join our Discord community & WhatsApp group.</p>
                                 
-                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/M5itd5FK32" target="_blank">Sign Up</a>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.gle/PPyyu8zyCNP1TT8S8" target="_blank">Sign Up</a>
                             </div>
                         </div>
                     </div>
