--- a/index.html
+++ b/index.html
@@ -336,6 +336,8 @@
                              class="img-fluid rounded shadow-sm" 
                              style="max-width: 100%; height: auto;">
                     </div>
+
+                    <a href="all-tropical-spring-hack25.html" class="btn btn-warning">Get More Info</a>
                 </div>
 
                     <!-- simple text card 
