--- a/all-tropical-spring-hack25.html
+++ b/all-tropical-spring-hack25.html
@@ -282,6 +282,7 @@
                     <p>Hack your way into the spring vibes! Let Miami's tropical energy inspire your next big idea in this vibrant hackathon.</p>
                     <p><strong>Workshops:</strong> March 24th - 27th, 2025<br>Daily sessions from Monday to Thursday to prep you for the big weekend.</p>
                     <p><strong>Hackathon:</strong> March 29–31, 2025<br>Starts Saturday at 9 AM and ends Monday at 5 PM.</p>
+                    <p><strong>Hackathon:</strong> March 29–31, 2025<br>Carreer Fair</p>
                 </div>
 
                 <!-- Column 2 -->
