--- a/index.html
+++ b/index.html
@@ -372,13 +372,13 @@
                 <!-- Hackathon flyer -->
                 <div class="text-center mb-4">
                     <div class="text-center my-3">
-                        <img src="https://github.com/user-attachments/assets/82bbcfcf-fb17-4255-9468-68def1781b0d" 
+                        <img src="https://github.com/user-attachments/assets/310bf50a-85ef-40e9-bf2a-d61bae31f701" 
                              alt="305 Hackathon | FALL 2025" 
                              class="img-fluid rounded shadow-sm" 
                              style="max-width: 100%; height: auto;">
                     </div>
 
-                    <a href="all-tropical-spring-hack25.html" class="btn btn-warning">More Info Soon</a>
+                    <a href="all-305-Hackathon25.html" class="btn btn-warning">Get More Info</a>
                 </div>
 
                     <!-- simple text card 
