--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@
                         <img class="card-img-top" src="https://github.com/user-attachments/assets/a7bc6985-cbcc-42ff-a415-87aad149914c" alt="Daniel Hernandez - Vice President" />
                         <div class="card-body">
                             <h5 class="fw-bold">Daniel Hernandez</h5>
-                            <p class="mb-0">Vice President & Tech Lead C5</p>
+                            <p class="mb-0">Tech Lead C5</p>
                             <p class="mb-2 text-muted">Pronouns: He/Him</p> <!-- Pronouns added here -->
                             <p class="mt-3">Graduate student @FIU, majoring in Computer Science.</p>
                             <p class="mt-3">B.Sc. in Computer Science, December 2024</p>
@@ -191,7 +191,7 @@
                         <img class="card-img-top" src="https://github.com/user-attachments/assets/7d0db14a-f473-41be-99b6-080d0066b4ca" alt="Mariana Phelan - Tech Lead" />
                         <div class="card-body">
                             <h5 class="fw-bold">Mariana Phelan</h5>
-                            <p class="mb-0">Tech Lead C3 | C4 </p>
+                            <p class="mb-0">Logistics Chair 3 & Marketing chair </p>
                             <p class="mb-2 text-muted">Pronouns: She/Her</p> <!-- Pronouns added here -->
                             <p class="mt-3">Junior @FIU majoring in Computer Science.</p>
                             <p class="mt-3">Born and raised in Caracas, Venezuela. Hope to become the best version of herself and also a Software Engineer at one of the big tech companies like Apple, Google, or Microsoft. In 10 years from now I hope to become the CEO of my own tech company, and travel around the world meeting new people and new cultures!</p>
@@ -316,6 +316,22 @@
                 </div>
 
 
+                <div class="col-lg-3 col-md-6 mb-5">
+                    <div class="card bg-light border-0 h-100">
+                        <img class="card-img-top" src="https://github.com/user-attachments/assets/9c130cb5-083c-4a17-ae50-d9848af2b5d0" alt="Jhoan Gonzales - Biomedical Engineer" />
+                        <div class="card-body">
+                            <h5 class="fw-bold">Jhoan Gonzales</h5>
+                            <p class="mb-0">Tech Lead C10</p>
+                            <p class="mb-2 text-muted">Pronouns: He/Him</p> <!-- Pronouns added here -->
+                            <p class="mt-3">Junior @FIU majoring in Biomedical Engineering</p>
+                            <p class="mt-3">Jhoan Gonzales is a junior majoring in Biomedical Engineering at Florida International University and currently works as a Biochemist Student Assistant. He has diverse research experience, including contributing to the FIU Undergraduate Research Journal, gaining hands-on expertise in medical scribing, and volunteering with the Engineering Research Society. Passionate about innovation in technology, Jhoan also enjoys traveling to new destinations around the world during his free time.</p>
+                            <a href="https://www.linkedin.com/in/jhoan-gonzales497/" target="_blank" class="linkedin-icon">
+                                <i class="bi bi-linkedin"></i> LinkedIn
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Jason -->
                 <div class="col-lg-3 col-md-6 mb-5">
                     <div class="card bg-light border-0 h-100">
@@ -333,7 +349,7 @@
                     </div>
                 </div>
 
-
+                Logistics Chair 1 & Marketing chair
 
 
                 <!-- Henry -->
@@ -342,7 +358,7 @@
                         <img class="card-img-top" src="https://github.com/user-attachments/assets/bed7c1cb-aaac-4502-a94d-9766e945384b" alt="Henry Cruz - Marketing and Logistics Chair" />
                         <div class="card-body">
                             <h5 class="fw-bold">Henry Cruz</h5>
-                            <p class="mb-0">Logistics Chair 1 & Marketing chair</p>
+                            <p class="mb-0">Logistics Chair 1 </p>
                             <p class="mb-2 text-muted">Pronouns: He/Him</p> <!-- Pronouns added here -->
                             <p class="mt-3">Junior @FIU majoring in Computer Science.</p>
                             <a href="https://www.linkedin.com/in/henrycruz03/" target="_blank" class="linkedin-icon">
@@ -351,6 +367,8 @@
                         </div>
                     </div>
                 </div>
+
+
                 <!-- Bryan -->
                 <div class="col-lg-3 col-md-6 mb-5">
                     <div class="card bg-light border-0 h-100">
