--- a/index.html
+++ b/index.html
@@ -204,6 +204,17 @@
         }
     }
 
+
+         /* General Styles */
+         #game-frame {
+            width: 100%;
+            height: 700px;
+            border: none; /* Removes iframe border */
+        }
+
+      /* end game */
+
+
         </style>
     </head>
     <body>
@@ -293,7 +304,7 @@
     </div>
 </header>
 
-
+<iframe id="game-frame" src="game.html"></iframe>
 
 
 
@@ -674,6 +685,30 @@
         </script>
 
         <!-- Bootstrap Core JS -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
+
+
+// Space Game
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </script>
     </body>
 </html>
