--- a/index.html
+++ b/index.html
@@ -657,6 +657,11 @@
 </section>
 
 
+</div>
+
+<a href="CODECRUNCH-HACK.html" class="btn btn-warning">CODECRUNCH-HACK</a>
+</div>
+
         <!-- Footer -->
         <section class="footer-section">
             <footer>
