--- a/about.html
+++ b/about.html
@@ -315,7 +315,7 @@
                     </div>
                 </div>
 
-
+                <!-- Jhoan Gonzales -->
                 <div class="col-lg-3 col-md-6 mb-5">
                     <div class="card bg-light border-0 h-100">
                         <img class="card-img-top" src="https://github.com/user-attachments/assets/9c130cb5-083c-4a17-ae50-d9848af2b5d0" alt="Jhoan Gonzales - Biomedical Engineer" />
@@ -331,6 +331,25 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Ashley Prado -->
+                <div class="col-lg-3 col-md-6 mb-5">
+                    <div class="card bg-light border-0 h-100">
+                        <img class="card-img-top" src="https://github.com/user-attachments/assets/b39b7a78-c1c8-407d-b073-998fcf1aaa34" alt="Ashley - Computer Science Student" />
+                        <div class="card-body">
+                            <h5 class="fw-bold">Ashley Prado</h5>
+                            <p class="mb-0">Tech Lead C11</p>
+                            <p class="mb-2 text-muted">Pronouns: She/Her</p> <!-- Pronouns added here -->
+                            <p class="mt-3">Junior @FIU majoring in Computer Science</p>
+                            <p class="mt-3">Ashley is passionate about using technology to solve real-world problems and is dedicated to empowering others in her community. As a Tech Lead, Ashley thrives on collaboration and enjoys creating engaging lessons to help others discover their passion for technology. Outside of school, she loves volunteering and inspiring others to pursue their goals.</p>
+                            <a href="https://www.linkedin.com/in/ashley-prado/" target="_blank" class="linkedin-icon">
+                                <i class="bi bi-linkedin"></i> LinkedIn
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                
+
 
                 <!-- Jason -->
                 <div class="col-lg-3 col-md-6 mb-5">
@@ -349,7 +368,7 @@
                     </div>
                 </div>
 
-                Logistics Chair 1 & Marketing chair
+                
 
 
                 <!-- Henry -->
