--- a/CODECRUNCH-HACK.html
+++ b/CODECRUNCH-HACK.html
@@ -728,7 +728,7 @@
                 Want to collaborate with us on a track for Spring 2025? Contact us at:
             </p>
             <a href="mailto:codecrunchsponsors@outlook.com" class="email-button">
-                <i class="fas fa-envelope"></i> codecrunchsponsors@outlook.com
+                <i class="fas fa-envelope"></i> codecrunchclub@gmail.com
             </a>
         </div>
     </section>
@@ -1059,7 +1059,7 @@
 
 
     <footer>
-        <p>&copy; 2025 Tropical Hacks | <a href="mailto:info@tropicalhacks.com">info@tropicalhacks.com</a></p>
+        <p>&copy; 2025 Tropical Hacks | <a href="mailto:codecrunchhelp@outlook.com">codecrunchhelp@outlook.com</a></p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
