--- a/CODECRUNCH-HACK.html
+++ b/CODECRUNCH-HACK.html
@@ -727,7 +727,7 @@
             <p>
                 Want to collaborate with us on a track for Spring 2025? Contact us at:
             </p>
-            <a href="mailto:codecrunchsponsors@outlook.com" class="email-button">
+            <a href="mailto:codecrunchclub@gmail.com" class="email-button">
                 <i class="fas fa-envelope"></i> codecrunchclub@gmail.com
             </a>
         </div>
