--- a/about.html
+++ b/about.html
@@ -349,6 +349,23 @@
                     </div>
                 </div>
                 
+                
+                <!-- Gabriela Machado -->
+                <div class="col-lg-3 col-md-6 mb-5">
+                    <div class="card bg-light border-0 h-100">
+                        <img class="card-img-top" src="https://github.com/user-attachments/assets/aa5ac66d-1fe8-42c3-9656-87931f0145e2" alt="Gabriela - Computer Science Student" />
+                        <div class="card-body">
+                            <h5 class="fw-bold">Gabriela Machado</h5>
+                            <p class="mb-0">Tech Lead C11</p>
+                            <p class="mb-2 text-muted">Pronouns: She/Her</p> <!-- Pronouns added here -->
+                            <p class="mt-3">Information technology Student @FIU </p>
+                            <p class="mt-3">Gabriela has a strong passion for using technology to create innovative ideas. As video games have played a significant role in her life, she enjoys helping others discover their own passion for technology and guiding them in designing original projects. Gabriela hopes to inspire others to embrace their creativity and develop new projects that can benefit everyone.</p>
+                            <a href="https://www.linkedin.com/in/gabriela-machado-76b808311/" target="_blank" class="linkedin-icon">
+                                <i class="bi bi-linkedin"></i> LinkedIn
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
 
                 <!-- Jason -->
