--- a/index.html
+++ b/index.html
@@ -695,10 +695,10 @@
                             <div class="card-body text-center p-4 p-lg-5">
                                 <h2 class="fs-4 fw-bold">Upcoming Events</h2>
                                 
-                                <p class="mt-3">Find all the information about our workshops, including date, time, Zoom links, and in-person locations, on our Luma Calendar or the <a href="https://ba-00001.github.io/codecrunchclub/events.html" target="_blank">Events tab</a> on the website.</p>
+                                <p class="mt-3">Find all the information about our workshops, including date, time, Zoom links, and in-person locations, on our Luma Calendar website.</p>
                                 
-                                <p class="mt-3 mb-0"><strong>Visit:</strong> <a href="https://lu.ma/CODECRUNCH" target="_blank">LU.MA/CODECRUNCH</a> or click the button below to RSVP and view event details.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://lu.ma/CODECRUNCH" target="_blank">RSVP on Luma calendar</a><br>
+                                <p class="mt-3 mb-0"><strong>LUMA Calendar:</strong> <a href="https://lu.ma/CODECRUNCH" target="_blank">LU.MA/CODECRUNCH</a></p>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://lu.ma/CODECRUNCH" target="_blank">RSVP on LUMA calendar</a><br>
                             </div>
                         </div>
                     </div>
