--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
               <img class="card-img-top" src="https://github.com/ba-00001/imagesforWEB-1/blob/main/vice-president.jpg?raw=true" alt="Amilcar Pena - Vice President" />
               <div class="card-body">
                 <h5 class="fw-bold">Amilcar Pena</h5>
-                <p class="mb-0">Vice President & Tech Lead C1 | C2</p>
+                <p class="mb-0">Vice President & Tech Engagement Chair C1 | C2</p>
                 <p class="mb-2 text-muted">Pronouns: He/Him</p>
                 <p class="mt-3">Rising Junior @FIU majoring in Computer Science.</p>
                 <a href="https://www.linkedin.com/in/amilcarjpena/" target="_blank" class="linkedin-icon">
@@ -181,7 +181,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/a7bc6985-cbcc-42ff-a415-87aad149914c" alt="Daniel Hernandez - Vice President" />
               <div class="card-body">
                 <h5 class="fw-bold">Daniel Hernandez</h5>
-                <p class="mb-0">Tech Lead C5</p>
+                <p class="mb-0">Tech Engagement Chair C5</p>
                 <p class="mb-2 text-muted">Pronouns: He/Him</p>
                 <p class="mt-3">Graduate student @FIU, majoring in Computer Science.</p>
                 <p class="mt-3">B.Sc. in Computer Science, December 2024</p>
@@ -214,7 +214,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/715871d8-3d0f-48b9-9983-020dce3e1a7f" alt="Arnold Miranda-Pino - Tech Lead" />
               <div class="card-body">
                 <h5 class="fw-bold">Arnold Miranda-Pino</h5>
-                <p class="mb-0">Tech Lead C3 | C4</p>
+                <p class="mb-0">Tech Engagement Chair C3 | C4</p>
                 <p class="mb-2 text-muted">Pronouns: He/Him</p>
                 <p class="mt-3">Junior @FIU majoring in Computer Science.</p>
                 <p class="mt-3">Arnold, of Cuban descent, is passionate about web and app development and enjoys working with TypeScript. He has supported new students and helped design a mobile app workshop using Agile methods.</p>
@@ -230,7 +230,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/cb0af0a3-0ab4-4806-a52d-000bb95fdff0" alt="Sara Salvatierra - Tech Lead" />
               <div class="card-body">
                 <h5 class="fw-bold">Sara Salvatierra</h5>
-                <p class="mb-0">Tech Lead C6</p>
+                <p class="mb-0">Tech Engagement Chair C6</p>
                 <p class="mb-2 text-muted">Pronouns: She/Her</p>
                 <p class="mt-3">FIU student majoring in Computer Science.</p>
                 <p class="mt-3">Sara is passionate about creating simple solutions to complex problems, especially in cybersecurity. She has contributed to front-end development for a web3 marketing platform and an Instagram filter with over 1.7 million impressions.</p>
@@ -246,7 +246,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/a8415473-ac0d-4b9d-92f4-d810210e230d" alt="Gabriel Nogueras - Tech Lead" />
               <div class="card-body">
                 <h5 class="fw-bold">Gabriel Nogueras</h5>
-                <p class="mb-0">Tech Lead C7</p>
+                <p class="mb-0">Tech Engagement Chair C7</p>
                 <p class="mb-2 text-muted">Pronouns: He/Him</p>
                 <p class="mt-3">FIU student majoring in Computer Science.</p>
                 <a href="https://www.linkedin.com/in/gabrielnogueras/" target="_blank" class="linkedin-icon">
@@ -261,7 +261,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/fd6f828d-03b0-4ca5-8c91-c9746c26c052" alt="Justin Joseph - Tech Lead" />
               <div class="card-body">
                 <h5 class="fw-bold">Justin Joseph</h5>
-                <p class="mb-0">Tech Lead C6</p>
+                <p class="mb-0">Tech Engagement Chair C6</p>
                 <p class="mb-2 text-muted">Pronouns: He/Him</p>
                 <p class="mt-3">FIU student majoring in Computer Science.</p>
                 <p class="mt-3">Born and raised in Florida, Justin is a sophomore at FIU, majoring in Computer Science with a minor in Mathematical Sciences. He is particularly interested in cybersecurity and web development.</p>
@@ -277,7 +277,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/9b2f6572-b17d-4f5d-a50b-4964dd3c6222" alt="Thierry Laguerre - Tech Lead" />
               <div class="card-body">
                 <h5 class="fw-bold">Thierry Laguerre</h5>
-                <p class="mb-0">Tech Lead C8</p>
+                <p class="mb-0">Tech Engagement Chair C8</p>
                 <p class="mb-2 text-muted">Pronouns: He/Him</p>
                 <p class="mt-3">FIU student majoring in Computer Science.</p>
                 <p class="mt-3">Thierry is a driven student with hands-on experience in database management, web development, and UI/UX design. He is passionate about leveraging technology for meaningful solutions.</p>
@@ -293,7 +293,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/9c130cb5-083c-4a17-ae50-d9848af2b5d0" alt="Jhoan Gonzales - Biomedical Engineer" />
               <div class="card-body">
                 <h5 class="fw-bold">Jhoan Gonzales</h5>
-                <p class="mb-0">Tech Lead C10</p>
+                <p class="mb-0">Tech Engagement Chair C10</p>
                 <p class="mb-2 text-muted">Pronouns: He/Him</p>
                 <p class="mt-3">Junior @FIU majoring in Biomedical Engineering</p>
                 <p class="mt-3">Jhoan works as a Biochemist Student Assistant and has diverse research experience. He is passionate about innovation and technology.</p>
@@ -309,7 +309,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/b39b7a78-c1c8-407d-b073-998fcf1aaa34" alt="Ashley Prado - Tech Lead" />
               <div class="card-body">
                 <h5 class="fw-bold">Ashley Prado</h5>
-                <p class="mb-0">Tech Lead C11</p>
+                <p class="mb-0">Tech Engagement Chair C11</p>
                 <p class="mb-2 text-muted">Pronouns: She/Her</p>
                 <p class="mt-3">Junior @FIU majoring in Computer Science</p>
                 <p class="mt-3">Ashley is dedicated to using technology to solve real-world problems and empower her community.</p>
@@ -325,7 +325,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/aa5ac66d-1fe8-42c3-9656-87931f0145e2" alt="Gabriela Machado - Tech Lead" />
               <div class="card-body">
                 <h5 class="fw-bold">Gabriela Machado</h5>
-                <p class="mb-0">Tech Lead C11</p>
+                <p class="mb-0">Tech Engagement Chair C11</p>
                 <p class="mb-2 text-muted">Pronouns: She/Her</p>
                 <p class="mt-3">Information Technology Student @FIU</p>
                 <p class="mt-3">Gabriela is passionate about using technology to create innovative ideas and inspire creativity.</p>
@@ -341,7 +341,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/167ecf79-4bca-4b21-b4f3-52e5a7b32057" alt="Jason Jiang - Treasurer" />
               <div class="card-body">
                 <h5 class="fw-bold">Jason Jiang</h5>
-                <p class="mb-0">Logistics Chair 2 & Industry Chair</p>
+                <p class="mb-0">Tech Engagement Chair C11</p>
                 <p class="mb-2 text-muted">Pronouns: He/Him</p>
                 <p class="mt-3">Senior @FIU majoring in Computer Science.</p>
                 <p class="mt-3">Jason, born in New York with Chinese heritage, is exploring the tech world and focusing on personal growth.</p>
@@ -357,7 +357,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/bed7c1cb-aaac-4502-a94d-9766e945384b" alt="Henry Cruz - Marketing and Logistics Chair" />
               <div class="card-body">
                 <h5 class="fw-bold">Henry Cruz</h5>
-                <p class="mb-0">Logistics Chair 1</p>
+                <p class="mb-0">Tech Engagement Chair C3,C4 & C10</p>
                 <p class="mb-2 text-muted">Pronouns: He/Him</p>
                 <p class="mt-3">Junior @FIU majoring in Computer Science.</p>
                 <a href="https://www.linkedin.com/in/henrycruz03/" target="_blank" class="linkedin-icon">
