--- a/all-eboard.html
+++ b/all-eboard.html
@@ -172,27 +172,47 @@
   </head>
   <body style="margin:0; padding:0; min-height:100%; display:flex; flex-direction:column; font-family:Arial, sans-serif; background: linear-gradient(135deg, #1a73e8, #ff5722); color: white;">
     <!-- Navigation -->
-    <nav class="navbar navbar-expand navbar-dark bg-dark" style="position:sticky; top:0; z-index:1000;">
-      <div class="container px-lg-5">
-        <!-- Logo and Brand Name -->
-        <a class="navbar-brand" href="index.html" style="display:flex; align-items:center;">
-          <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Code Crunch Club Logo" style="height:50px; margin-right:10px;" />
-          Code Crunch
-        </a>
-        <!-- Navigation Links Always Visible -->
-         <!-- <a class="nav-link active" aria-current="page" href="all-eboard.html" style="padding:10px 15px;">E-board</a> -->
-        <div class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <a class="nav-link" href="index.html" style="padding:10px 15px;">Home</a>
-          <a class="nav-link" href="about.html" style="padding:10px 15px;">About</a>
-          <a class="nav-link" href="events.html" style="padding:10px 15px;">Events</a>
-          <a class="nav-link" href="SWE-CONVOS.html" style="padding:10px 15px;">SWE-CONVOS</a>
-          <a class="nav-link" href="SWE-CONVOS.html" style="padding:10px 15px;">SWE-CONVOS</a>
-          <a class="nav-link" href="CODECRUNCH-HACK.html" style="padding:10px 15px;">Code Crunch Hackathon</a>
-          <a class="nav-link" href="all-eboard.html" style="padding:10px 15px;">E-board</a>
-          <a class="nav-link" href="contact.html" style="padding:10px 15px;">Contact</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position:sticky; top:0; z-index:1000;">
+        <div class="container px-lg-5">
+          <!-- Logo and Brand Name -->
+          <a class="navbar-brand" href="index.html" style="display:flex; align-items:center;">
+            <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Code Crunch Club Logo" style="height:50px; margin-right:10px;" />
+            Code Crunch
+          </a>
+          <!-- Toggler Button for Mobile -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
+                  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- Collapsible Nav Links -->
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html" style="padding:10px 15px;">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html" style="padding:10px 15px;">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="events.html" style="padding:10px 15px;">Events</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="SWE-CONVOS.html" style="padding:10px 15px;">SWE-CONVOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="CODECRUNCH-HACK.html" style="padding:10px 15px;">Code Crunch Hackathon</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="all-eboard.html" style="padding:10px 15px;">E-board</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html" style="padding:10px 15px;">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+      
 
         <!-- Logo Section -->
         <div class="logo-container">
